Add initial Avro writer